tests/baselines/reference/parserVariableDeclaration2.errors.txt
==== tests/cases/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration2.ts (2 errors) ====
    (function() {
            var check = function () {
            }
    
            var checkNot = function () {
            }
    
            MUnit.test(a);
            ~~~~~
!!! error TS2304: Cannot find name 'MUnit'.
                       ~
!!! error TS2304: Cannot find name 'a'.
    })();